# cmake-file-api-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml
examples/: basic.rs  example_from_readme.rs
examples/cpp/: CMakeLists.txt  main.cpp
src/: index.rs  lib.rs  objects.rs  query.rs  reply.rs
src/objects/: cache_v2.rs  cmake_files_v1.rs  codemodel_v2.rs  configure_log_v1.rs  toolchains_v1.rs
src/objects/codemodel_v2/: backtrace_graph.rs  codemodel.rs  directory.rs  target.rs
tests/: test_query.rs  test_real_projects.rs  test_reply.rs
